--- a/Week5_Grids/css/imagehover.css
+++ b/Week5_Grids/css/imagehover.css
@@ -19,8 +19,8 @@
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
-   margin-left: 0.6rem;
-   width: 150px;
+   margin-left: 7%;
+   width: 80%;
    height: 35px;
    -webkit-transform: translateY(70px);
    -moz-transform: translateY(70px);
@@ -81,7 +81,7 @@
    -moz-transform: translateY(-162px);
    -o-transform: translateY(-162px);
    -ms-transform: translateY(-162px);
-   transform: translateY(-162px);
+   transform: translateY(-100%);
 }
 .view-first:hover .mask {
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -128,17 +128,6 @@ a.info:hover{
    color: black;
 }
 
-@media(max-width: 1100px){
-   .view-first a.info{
-      -webkit-transform: translateY(-135px);
-      -moz-transform: translateY(-135px);
-      -o-transform: translateY(-135px);
-      -ms-transform: translateY(-135px);
-      transform: translateY(-135px);
-   }
-   .view-first .mask{
-      margin-left: 0.5rem;
-   }
-}
+
 
 				
