--- a/Week5_Grids/css/imagehover2.css
+++ b/Week5_Grids/css/imagehover2.css
@@ -19,8 +19,8 @@
    -o-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
-   margin-left: 1.8rem;
-   width: 150px;
+   margin-left: 13%;
+   width: 70%;
    height: 35px;
    -webkit-transform: translateY(60px);
    -moz-transform: translateY(60px);
@@ -129,9 +129,9 @@ a.info:hover{
 }
 
 
-@media(max-width: 400px){
+/*@media(max-width: 400px){
    .view-first .mask{
       margin-left: 0.8rem;
    }
-}
+}*/
             
